--- a/Slides_In_LaTeX.tex
+++ b/Slides_In_LaTeX.tex
@@ -59,14 +59,10 @@
 \date{I am in the Statistics Department here at UNL and plan to graduate in May 2025.}
 
 \usepackage{graphicx}
-%\graphicspath{ {/hw10-professional-communication-RyanLalicker/} }
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\usepackage{hyperref}
 
 
-{\ttfamily\noindent\itshape\color{messagecolor}{\#\# New names:\\\#\# * `` -> `...1`}}\end{kframe}
-\end{knitrout}
+
 
 %-------------------------Beginning of document----------------
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
@@ -97,5 +93,13 @@
 % End of graph slide
 
 
+% Start of CV link slide.
+\begin{frame}
 
+\href{https://github.com/RyanLalicker/RyanLalicker.github.io/blob/14111b33cfb883da8ba9a2036364c838d95f5767/LaTeXTemplates_moderncv-cv-and-cover-letter_v1.3/MockCV.pdf}{My joke CV}
+
+\end{frame}
+% End of CV slide.
+
+% End of document
 \end{document}
