--- a/Slides_in_HTML.Rmd
+++ b/Slides_in_HTML.Rmd
@@ -2,7 +2,9 @@
 title: "Slides_in_HTML"
 author: "Ryan Lalicker"
 date: "2023-10-26"
-output: ioslides_presentation
+output:
+  beamer_presentation: default
+  ioslides_presentation: default
 ---
 
 ```{r setup, include=FALSE}
